jwt auth added, endpoints based on user_type_id
