# middlewares/admin.go
@@ -1,0 +1,27 @@
+package middlewares
+
+import (
+	"net/http"
+
+	"github.com/gin-gonic/gin"
+)
+
+func AdminMiddleware() gin.HandlerFunc {
+	return func(c *gin.Context) {
+		userTypeIDRaw, exists := c.Get("user_type_id")
+		if !exists {
+			c.JSON(http.StatusForbidden, gin.H{"error": "Forbidden"})
+			c.Abort()
+			return
+		}
+
+		userTypeID, ok := userTypeIDRaw.(float64)
+		if !ok || int(userTypeID) != 3 {
+			c.JSON(http.StatusForbidden, gin.H{"error": "Forbidden"})
+			c.Abort()
+			return
+		}
+
+		c.Next()
+	}
+}
