# models/auth.go
@@ -1,0 +1,10 @@
+package models
+
+type LoginInput struct {
+	Username string `json:"username" binding:"required"`
+	Password string `json:"password" binding:"required"`
+}
+
+type TokenResponse struct {
+	Token string `json:"token"`
+}
